crates/alder-parse/src/expression/snapshots/alder_parse__expression__if___tests__error_condition.snap
---
source: crates/alder-parse/src/expression/if_.rs
description: "if else { 1 }"
---
If(
    Condition(
        Reserved(
            Else,
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
