crates/alder-parse/src/expression/snapshots/alder_parse__expression__if___tests__error_else_dangling.snap
---
source: crates/alder-parse/src/expression/if_.rs
description: "if x { 1 } else"
---
If(
    ElseBranchStart(
        1,
        16,
    ),
    1,
    1,
)
