crates/alder-parse/src/expression/snapshots/alder_parse__expression__if___tests__error_missing_block.snap
---
source: crates/alder-parse/src/expression/if_.rs
description: if x
---
If(
    Then(
        Open(
            1,
            5,
        ),
        1,
        5,
    ),
    1,
    1,
)
