crates/alder-parse/src/expression/snapshots/alder_parse__expression__if___tests__error_then_keyword.snap
---
source: crates/alder-parse/src/expression/if_.rs
description: if x then y else z
---
If(
    ThenKeyword(
        1,
        6,
    ),
    1,
    1,
)
