crates/alder-parse/src/expression/snapshots/alder_parse__expression__if___tests__if_block_tail_values.snap
---
source: crates/alder-parse/src/expression/if_.rs
description: "if a {\n    let x = 1\n    x\n} else {\n    let y = 2\n    y\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 7,
            column: 2,
        },
    },
    value: If {
        branches: [
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 4,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 4,
                            column: 2,
                        },
                    },
                    value: Block {
                        stmts: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 14,
                                    },
                                },
                                value: Let(
                                    LetDecl {
                                        pattern: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 9,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 10,
                                                },
                                            },
                                            value: Var(
                                                "x",
                                            ),
                                        },
                                        annotation: None,
                                        value: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 13,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 14,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 1.0,
                                                    text: "1",
                                                },
                                            ),
                                        },
                                    },
                                ),
                            },
                        ],
                        tail: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 6,
                                    },
                                },
                                value: Var(
                                    "x",
                                ),
                            },
                        ),
                    },
                },
            },
        ],
        final_else: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 8,
                    },
                    end: Position {
                        line: 7,
                        column: 2,
                    },
                },
                value: Block {
                    stmts: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 5,
                                },
                                end: Position {
                                    line: 5,
                                    column: 14,
                                },
                            },
                            value: Let(
                                LetDecl {
                                    pattern: Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 10,
                                            },
                                        },
                                        value: Var(
                                            "y",
                                        ),
                                    },
                                    annotation: None,
                                    value: Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 14,
                                            },
                                        },
                                        value: Number(
                                            NumberLit {
                                                value: 2.0,
                                                text: "2",
                                            },
                                        ),
                                    },
                                },
                            ),
                        },
                    ],
                    tail: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 5,
                                },
                                end: Position {
                                    line: 6,
                                    column: 6,
                                },
                            },
                            value: Var(
                                "y",
                            ),
                        },
                    ),
                },
            },
        ),
    },
}
